<?xml version="1.0"?>
<package format="2">
  <name>gnss_visualization</name>
  <version>0.0.0</version>
  <description>ROS-based GNSS visualization</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="james@jyoder.com">James Yoder</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- This tool requires messages such as Attitude2D, SingleBaselineRTK, etc.
       They are defined in the gbx_ros_bridge_msgs package, found in the gbx_to_ros
        GitLab repository. -->
  <build_depend>gbx_ros_bridge_msgs</build_depend>
  <exec_depend>gbx_ros_bridge_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
